src/test/lab5/invalid/OverloadedPlus.slac
class C {
}

method main(): Unit = {
  // Error: Type error: Expected one of the following types: Int, String, found: C
  println("test" + (new C()))
}
